Improved some stuff
- Tidied up languages directory
- Translated server's error messages to various languages
- Fixed some bugs
- Patched administrator permission issue
- Improved layout for mobile

--- a/public/admin.css
+++ b/public/admin.css
@@ -106,6 +106,10 @@
     width: 800px;
     max-width: calc(100vw - var(--padding) * 2);
 }
+    :where(#PopOver_Problem, #PopOver_EditProblem) .activity
+    {
+        grid-auto-rows: max-content auto;
+    }
     :where(#PopOver_Problem, #PopOver_EditProblem) .activity > .content
     {
         display: grid;
