Patched some fixes
- Added SEO
- Added search for admin
- Fixed some issues

--- a/src/templates/Body_Admin.html
+++ b/src/templates/Body_Admin.html
@@ -5,7 +5,7 @@
 <script src="/<#? applang ?#>/script.js"></script>
 <header class="titlebar">
 	<img class="icon" src="<#? appassets ?#>/icon_logo.ico"/>
-	<span class="name"><#? apptitle ?#> for Admin</span>
+	<span class="name"><#? apptitleadmin ?#></span>
 </header>
 <div class="root">
 	<nav class="sidebar">
