--- a/src/templates/Navigation_Admin.html
+++ b/src/templates/Navigation_Admin.html
@@ -1,4 +1,5 @@
 <section class="desktop">
+	<input type="search" placeholder="<$ search title />" id="Input_SearchGlobal" origin="/admin" autocomplete="off"/>
 	<div class="navigation">
 		<a goto="/admin/home">
 			<span class='icon'>&#xfe8a;</span>
@@ -37,3 +38,4 @@
 		</a>
 	</span> 
 </section>
+<script src="/sidebar.js"></script>
