--- a/src/templates/Head_Admin.html
+++ b/src/templates/Head_Admin.html
@@ -6,7 +6,7 @@
  <link rel="stylesheet" type="text/css" href="/<#? applang ?#>/style.css" />
  <link rel="stylesheet" type="text/css" href="/<#? applang ?#>/admin.css" />
  <link rel="icon" href="<#? appicon ?#>"/> 
- <title ad-app-title="<#? apptitle ?#>"><#? apptitle ?#></title> 
+ <title ad-app-title="<#? apptitleadmin ?#>"><#? apptitleadmin ?#></title> 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
  <script src="<#? appassets ?#>/ui/v3/head.js"></script> 
  <script src="<#? appassets ?#>/ui/v3/components.js"></script> 
