--- a/src/templates/Head.html
+++ b/src/templates/Head.html
@@ -11,6 +11,7 @@
 <meta name="description" content="<#? page_description ?#>">
 <meta name="keywords" content="<#? page_keywords ?#>">
 <meta property="og:title" content="<#? page_name ?#>"/>
+<meta property="og:image" content="<#? apphost ?#><#? page_thumbnail ?#>"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="<#? appassets ?#>/ui/v3/head.js"></script>
 <script src="<#? appassets ?#>/ui/v3/components.js"></script>
