--- a/src/templates/Navigation_Admin.html
+++ b/src/templates/Navigation_Admin.html
@@ -32,6 +32,10 @@
 			<span class='icon'>&#xed89;</span>
 			<span><$ courses title /></span>
 		</a>
+		<a goto="/admin/search">
+			<span class='icon'>&#xf664;</span>
+			<span><$ search title /></span>
+		</a>
 		<a goto="/admin/settings">
 			<span class='icon'>&#xf337;</span>
 			<span><$ settings title /></span>
