Improved Navigation and Quiz
- Added navigation for quiz
- Improved layout for quiz
- Added confirmation before submitting quiz
- Added link to Your Judge
- Added explanation to each answer choices
- Updated number of quiz' questions to 10 from 5

--- a/public/problems.css
+++ b/public/problems.css
@@ -364,7 +364,7 @@
                     }
 
                     > *,
-                    > *:not(mjx-container) *
+                    > *:not(mjx-container) > *
                     {
                         margin: 0;
                     }
