--- a/src/templates/Navigation.html
+++ b/src/templates/Navigation.html
@@ -2,19 +2,24 @@
 	<input type="search" placeholder="<$ search title />" id="Input_SearchGlobal" autocomplete="off"/>
 	<div class="navigation">
 		<a goto="/home">
-			<span class='icon'>&#xfe8a;</span>
+			<span class="icon">&#xfe8a;</span>
 			<span><$ home title /></span>
 		</a>
 		<a goto="/courses">
-			<span class='icon'>&#xed8a;</span>
+			<span class="icon">&#xed8a;</span>
 			<span><$ courses title /></span>
 		</a>
 		<div class="separator" id="Separator_PinnedCourses"><$ courses pinned /></div>
 		<div id="Grid_PinnedCourses"></div>
 	</div> 
 	<div class="footer">
+		<a id="NavigationItem_Judge" goto="//judge.agapedimas.com" ad-type="newtab">
+			<img class="icon" src="/assets/logo_judge.png"/>
+			<span>Your Judge</span>
+			<span class="icon">&#xebad;</span>
+		</a>
 		<a goto="/settings">
-			<span class='icon'>&#xf337;</span>
+			<span class="icon">&#xf337;</span>
 			<span><$ settings title /></span>
 		</a>
 	</div>
@@ -23,19 +28,19 @@
 <section class="mobile">
 	<span class="navigation">
 		<a goto="/home">
-			<span class='icon'>&#xfe8b;</span>
+			<span class="icon">&#xfe8b;</span>
 			<span><$ home title /></span>
 		</a>
 		<a goto="/courses">
-			<span class='icon'>&#xed89;</span>
+			<span class="icon">&#xed89;</span>
 			<span><$ courses title /></span>
 		</a>
 		<a goto="/search">
-			<span class='icon'>&#xf664;</span>
+			<span class="icon">&#xf664;</span>
 			<span><$ search title /></span>
 		</a>
 		<a goto="/settings">
-			<span class='icon'>&#xf337;</span>
+			<span class="icon">&#xf337;</span>
 			<span><$ settings title /></span>
 		</a>
 	</span> 
